package com.example.gallery.utils

object TestTag {
    const val CLEAR_BUTTON = "CLEAR_BUTTON"
    const val MENU_BUTTON = "MENU_BUTTON"
    const val SYNC_MESSAGE = "SYNC_MESSAGE"
    const val NO_PHOTO = "No photo available to show"
    const val TRY_AGAIN_BUTTON = "TRY_AGAIN"
    const val TOAST_MESSAGE = "TOAST_MESSAGE"
    const val SCROLL_VIEW = "SCROLL_VIEW"
    const val PHOTO_BACK_BUTTON = "PHOTO_BACK_BUTTON"
}