...
            ) {
                IconButton(
                    onClick = { expanded = true }
                ) {
                    Icon(
                        painter = painterResource(id = R.drawable.ic_more_ver_dot_24),
                        contentDescription = "menu",
                        tint = Color.Black,
                        modifier = Modifier.size(iconSize).testTag(TestTag.MENU_BUTTON)
                    )
                }
                DropdownMenu(
                    expanded = expanded,
...
